--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Repo Example</title>
 </head>
 <body>
-    
+    <p>This is a test to see if my code is being pushed.</p>
 </body>
 </html>
