Hello World added.md

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Repo Example</title>
 </head>
 <body>
+    <h1>Hello World</h1>
+    <p>This is a greeting to the world</p>
     <p>This is a test to see if my code is being pushed.</p>
 </body>
 </html>
